--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "express-server",
+  "name": "Ticket-Master",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^6.0.8"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.0.11",
+    "mongoose-unique-validator": "^3.1.0",
+    "react-router-dom": "^6.4.2",
+    "validator": "^13.7.0"
   }
 }
